fix(#14): touch highlights on mobile

--- a/gitpen/src/styles.scss
+++ b/gitpen/src/styles.scss
@@ -16,3 +16,10 @@ html, body {
 * {
   -webkit-tap-highlight-color: transparent;
 }
+
+* {
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
